--- a/styles/style.css
+++ b/styles/style.css
@@ -20,14 +20,16 @@
     --tetiary: #EAD786;
     --light:#EAECED;
     --black:#000;
-  
+
+    --purple: #3F37AB;
+
 
     /* THE FONT-FAMILIES */
     --mont:'Montserrat';
     --sans: "DM Sans";
-    --mukta: 'Mukta'
-  
-  
+    --mukta: 'Mukta';
+
+
     /* SHADOWS AND TRANSITIONS */
     --shadows: 0px 22px 24px rgba(65, 111, 244, 0.2);
     --shadoos: 0px 0px 7px rgba(65, 111, 65, 0.2);
@@ -41,6 +43,10 @@
 
   ul{
       list-style-type:none;
+  }
+
+  .text-center { /* it will be used as utility class */
+      text-align: center;
   }
 
 
@@ -81,3 +87,35 @@
 
 
   /* THE END OF THE HERO SECTION */
+
+/* THE BEGINNING OF THE OUR PORTFOLIO SECTION */
+.portfolio-section {
+    padding-top: 52px 0px 100px;
+}
+.portfolio-section .title-header {
+    margin-bottom: 60px;
+}
+.portfolio-section .title-header h2 {
+    color: var(--purple);
+    font-size: 32px;
+    line-height: 100%;
+    letter-spacing: 3.5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    margin-bottom: 25px;
+    margin-top: 32px;
+}
+.portfolio-section .title-header p {
+    max-width: 650px;
+    margin: auto;
+    display: inline-block;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+.portfolio-section .title-header .seperator {
+    border-bottom: 2px solid #3F37AB;
+    width: 10%;
+    margin: auto;
+}
+
+/* THE END OF THE OUR PORTFOLIO SECTION */
