--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,10 @@
       text-align: center;
   }
 
-
+.title-header   p{
+    color:aqua;
+    
+}
   /* START YOUR CSS FROM HERE */
   /* ===========TO USE THE VARIABLE CHECK THE EXAMPLES BELOW====================== */
   /* color:var(--white);
