--- a/styles/style.css
+++ b/styles/style.css
@@ -117,5 +117,19 @@
     width: 10%;
     margin: auto;
 }
+.portfolio-section .flex-btn{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    
+
+}
+.portfolio-section .flex-btn .btn{
+    border: 2px solid var(--purple);
+    color: var(--black);
+    margin: 10px;
+    padding: 10px;
+}
+
 
 /* THE END OF THE OUR PORTFOLIO SECTION */
